--- a/html/accountUser.html
+++ b/html/accountUser.html
@@ -8,8 +8,11 @@
 </head>
 <body>
     <h2>teste account</h2>
+    <p id="userEmail" class="text-black">teste</p>
     <button id="btn-user" type="submit">LogOut</button>
 
     <script type="module" src="../js/logOut.js" defer></script>
+    <script type="module" src="../js/login.js" defer></script>
+    <script type="module" src="../js/verifyAccount.js" defer></script>
 </body>
 </html>
