--- a/html/auth.html
+++ b/html/auth.html
@@ -13,14 +13,17 @@
 
     <!--Tailwindcss-->
     <link rel="stylesheet" href="../css/output.css">
+    <link rel="stylesheet" href="../css/style.css">
 
+  <script type="module" src="../js/verifyAccount.js" defer></script>
   <script type="module" src="../js/register.js" defer></script>
+
 
   <title>Document</title>
 </head>
 
 <body class="">
-    <main class="bg-custom-yellow flex flex-col items-center justify-center h-screen">
+    <main id="createAccount" class="bg-custom-yellow flex flex-col items-center justify-center h-screen">
 
       <div id="loading" class="absolute inset-0 hidden justify-center items-center">
         <img src="../assets/loading.gif" alt="Loading gif">
@@ -38,15 +41,11 @@
           <!--Unauthenticated users-->
           <!--Form user unauthenticated-->
           <form id="authForm" class="flex flex-col text-white text-xl mb-3">
-
-            <label for="name" class="mb-2 mt-2">Nome:</label>
-            <input type="text" class="rounded-md placeholder:pl-3 text-black h-10" placeholder="Nome" name="name" id="name" >
-
             <label for="email" class="mb-2 mt-2">E-mail:</label>
             <input type="email" class="rounded-md placeholder:pl-3 h-10 text-black"  placeholder="E-mail" id="email" required>
     
             <label for="password" class="mb-2 mt-2">Senha: </label>
-            <input type="password" class="rounded-md placeholder:pl-3 h-10 text-black" placeholder="Senha" id="password" required>
+              <input type="password" class="rounded-md placeholder:pl-3 h-10 text-black" placeholder="Senha" id="password"  required>
     
             <button type="submit" class="mt-3 bg-green-500 p-3 rounded-md hover:bg-green-600 transition" id="submit">Cadastrar</button>
           </form>
@@ -62,7 +61,7 @@
             <p id="register">
               Já possui conta?
             </p>
-            <button id="btnEnterAccount" class="bg-green-500 mt-4 p-3 rounded-md hover:bg-green-600 transition">Entrar na conta</button>
+            <button id="btnEnterAccount" class="bg-green-500 flex mt-4 p-3 rounded-md hover:bg-green-600 transition">Entrar na conta</button>
           </div>
       </div>
     </main>
