--- a/html/login.html
+++ b/html/login.html
@@ -13,8 +13,10 @@
 
     <!--Tailwindcss-->
     <link rel="stylesheet" href="../css/output.css">
+    <link rel="stylesheet" href="../css/style.css">
     <!--CSS-->
   <script type="module" src="../js/login.js" defer></script>
+  
     <title>Document</title>
 </head>
 <body>
@@ -39,14 +41,14 @@
   
         <!--Unauthenticated users-->
         <!--Form user unauthenticated-->
-        <form id="authForm" class="flex flex-col text-white  text-xl mb-3">
+        <form id="loginForm" class="flex flex-col text-white  text-xl mb-3">
 
           <label for="email" class="mb-2 mt-2">E-mail: </label>
           <input type="email" class="rounded-md placeholder:pl-3 text-black h-10"  placeholder="E-mail" id="email" required>
   
           <label for="password" class="mb-2 mt-2">Senha: </label>
-          <input type="password" class="rounded-md placeholder:pl-3 text-black h-10" placeholder="Senha" id="password" required>
-  
+            <input type="password" id="password" class="rounded-md placeholder:pl-3 text-black h-10" placeholder="Senha">
+
           <button type="submit" class="mt-3 bg-green-500 p-3 rounded-md hover:bg-green-600 transition" id="submit">Entrar</button>
         </form>
 
@@ -66,5 +68,6 @@
         </div>
     </div>
   </main>
+  <script src="../js/verifyAccount.js"></script>
 </body>
 </html>
