--- a/html/resetPassword.html
+++ b/html/resetPassword.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>teste</h1>
+    <h2>products</h2>
+    <div id="productsContainer"></div>
+    <script type="module" src="../js/verifyAccount.js" defer></script>
 </body>
 </html>
