--- a/html/auth.html
+++ b/html/auth.html
@@ -15,7 +15,6 @@
     <link rel="stylesheet" href="../css/output.css">
     <link rel="stylesheet" href="../css/style.css">
 
-  <script type="module" src="../js/verifyAccount.js" defer></script>
   <script type="module" src="../js/register.js" defer></script>
 
 
@@ -65,5 +64,7 @@
           </div>
       </div>
     </main>
+
+    <script type="module" src="../js/renderProducts.js" defer></script>
 </body>
 </html>
