--- a/public/html/accountUser.html
+++ b/public/html/accountUser.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Document</title>
+    <title>Nossa Pizza</title>
 </head>
 <body>
-    <h2>teste account</h2>
+    <h2>Minha conta</h2>
     <p id="userEmail" class="text-black">teste</p>
+
     <button id="btn-user" type="submit">LogOut</button>
 
     <script type="module" src="../js/logOut.js" defer></script>
