--- a/public/html/resetPassword.html
+++ b/public/html/resetPassword.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="shortcut icon" href="../assets/logotype1.jpg" type="image/x-icon">
+
+    <link rel="manifest" href="/manifest.json">
+    <title>Nossa Pizza</title>
 </head>
 <body>
     <h2>products</h2>
-    <div id="productsContainer"></div>
     
 </body>
 </html>
