--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,14 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
+    <meta name="author" content="Cleverson Resende">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <meta name="keywords" content="Pizzaria, Caratinga, Ubaporanga">
+    <meta name="robots" content="index, follow">
+    <meta name="description" content="Não basta pedir pizza, tem que ser nossa pizza. Pizzaria de Caratinga, Ubaporanga e região">
+    
+    <link rel="manifest" href="manifest.json">
+    <link rel="shortcut icon" href="./assets/logotype1.jpg" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <!--Fonts-->
@@ -12,12 +18,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
     <!--Tailwindcss-->
-    <link rel="stylesheet" href="../css/output.css">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="./css/output.css">
+    <link rel="stylesheet" href="./css/style.css">
     <!--CSS-->
-  <script type="module" src="../js/login.js" defer></script>
+    <script type="module" src="./js/login.js" defer></script>
+    <script type="module" src="./js/login-google.js" defer></script>
+    <script type="module" src="./js/login-facebook.js" defer></script>
+
   
-    <title>Document</title>
+    <title>Nossa Pizza</title>
 </head>
 <body>
 
@@ -25,7 +34,7 @@
 
     <!--Loading-->
     <div id="loading" class="absolute inset-0 hidden justify-center items-center">
-      <img src="../assets/loading.gif" alt="Loading gif">
+      <img src="./assets/loading.gif" alt="Loading gif">
     </div>
 
 
@@ -33,7 +42,7 @@
 
       <!--Logotype Pizzaria-->
       <div class="flex justify-center mt-3 mb-3">
-        <img src="../assets/logotype1.jpg" class=" w-16 h-16 rounded-full" alt="Logo Nossa Pizza">
+        <img src="./assets/logotype1.jpg" class=" w-16 h-16 rounded-full" alt="Logo Nossa Pizza">
       </div>
       <div class="flex justify-center mb-3">
         <h3 id="authFormTitle" class="text-white text-2xl ">Entrar</h3>
@@ -54,8 +63,10 @@
 
         <!--Unauthenticated users google-->
         <div class="flex justify-center items-center text-4xl">
-          <i class="fa-brands fa-google p-4 hover:cursor-pointer"></i>
-          <i class="fa-brands fa-facebook p-4 hover:cursor-pointer"></i>
+          <button>
+            <i class="fa-brands google fa-google p-4 hover:cursor-pointer"></i>
+          </button>
+          <i class="fa-brands fa-facebook facebook p-4 hover:cursor-pointer"></i>
         </div>
   
         <!--switch from registration to login-->
@@ -68,6 +79,18 @@
         </div>
     </div>
   </main>
-
+  <script>
+        if ('serviceWorker' in navigator) {
+        window.addEventListener('load', () => {
+            navigator.serviceWorker.register('./service-worker.js')
+            .then((registration) => {
+                console.log('Service Worker registrado com sucesso:', registration);
+            })
+            .catch((error) => {
+                console.log('Falha ao registrar o Service Worker:', error);
+            });
+        });
+        }
+  </script>
 </body>
 </html>
